--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,6 +16,7 @@
       </h1>
       <nav>
         {{#if loggedIn}}
+        <a href="/dashboard">dashboard</a>
         <button id="logout" class="btn-no-style">logout</button>
         {{else}}
         <a href="/login">login</a>
@@ -31,10 +32,10 @@
   </div>
 
   {{#if loggedIn}}
-<script src="/javascript/logout.js"></script>
-{{/if}}
+  <script src="/javascript/logout.js"></script>
+  {{/if}}
 </body>
 
 </html>
 
-</html>
+
